--- a/gq.desktop
+++ b/gq.desktop
@@ -4,6 +4,6 @@ Comment=Interactive graphical LDAP browser
 Comment[pl]=Klient LDAP
 Icon=gq.png
 Exec=gq
-Terminal=0
+Terminal=false
 Type=Application
 # vi: encoding=utf-8
